// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommuteTrackerCard > DOM Snapshots > matches disruption scenario snapshot 1`] = `
"<!---->
      <div class="card-container" role="region" aria-label="Nelson's Column to Brick Lane">
        <div class="card-layout">
          <!-- Row 1: Unified Header -->
          <div class="header-row">
            <div class="header-left">
              <!--?lit--><img class="person-avatar" src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?auto=format&amp;fit=crop&amp;w=128&amp;h=128&amp;q=80" alt="Nelson's Column to Brick Lane">
              <div class="header-title"><!--?lit-->Nelson's Column to Brick Lane</div>
            </div>
            <div class="header-right">
              <span class="header-pill" style="background: rgba(76, 175, 80, 0.15); border-color: #4CAF50; color: #4CAF50;">
                <!--?lit-->Leave in 12m
              </span>
            </div>
          </div>

          <!-- Transit Modules (Only displayed when commute is relevant) -->
          <!--?lit--><!---->
      <div class="transit-module" role="button" tabindex="0" aria-label="View details for 26 to Shoreditch">
        <!-- Row 2: Transport Mode & Line Health -->
        <div class="module-header">
          <div class="mode-label-group">
            <span class="route-badge" style="background: #DC241F;">
              <!--?lit-->26
            </span>
            <span class="destination-label"><!--?lit-->Shoreditch</span>
          </div>
          <div class="line-health" style="color: #FF9800;">
            <span><!--?lit-->⚠</span>
            <span><!--?lit-->Minor Delays</span>
          </div>
        </div>

        <!-- Row 3: Corridor Schematic -->
        <!--?lit-->
              <div class="schematic-wrapper">
                <!--?lit-->
      <svg viewBox="0 0 460 60" class="schematic-svg">
        <!-- Background Track -->
        <line y1="22" y2="22" stroke="rgba(255, 255, 255, 0.12)" stroke-width="8" stroke-linecap="round" x1="40" x2="420"></line>
        <!-- Colored Route Track -->
        <line y1="22" y2="22" stroke-width="6" stroke-linecap="round" x1="40" x2="420" stroke="#DC241F"></line>

        <!-- Stops Nodes -->
        <!--?lit--><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="40"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="40">
              <!--?lit-->Victoria
            </text>
          <!----><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="166.66666666666669"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="166.66666666666669">
              <!--?lit-->Westminster
            </text>
          <!----><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="293.33333333333337"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="293.33333333333337">
              <!--?lit-->Horse Guards
            </text>
          <!----><!---->
              <circle cy="22" r="9" fill="#2B2D3A" stroke-width="3.5" cx="420" stroke="#DC241F"></circle>
              <circle cy="22" r="4" fill="#FFFFFF" cx="420"></circle>
              <text y="46" text-anchor="middle" fill="#FFFFFF" font-size="10.5" font-family="system-ui" font-weight="700" x="420">
                <!--?lit-->Trafalgar Sq
              </text>
            <!---->

        <!-- Vehicle Marker (Clean White Circle, No Outer Halo) -->
        <!--?lit-->
                <g style="filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.7)); transition: transform 0.6s ease;" transform="translate(331.3333333333333, 22)">
                  <circle cx="0" cy="0" r="11" stroke="#FFFFFF" stroke-width="2.5" fill="#DC241F"></circle>
                  <g transform="translate(-6, -6) scale(0.5)">
                    <path fill="#FFFFFF" d="M4 16c0 .88.39 1.67 1 2.22V20c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h8v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1.78c.61-.55 1-1.34 1-2.22V6c0-3.5-3.58-4-8-4s-8 .5-8 4v10zm3.5 1c-.83 0-1.5-.67-1.5-1.5S6.67 14 7.5 14s1.5.67 1.5 1.5S8.33 17 7.5 17zm9 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm1.5-6H6V6h12v5z"></path>
                  </g>
                </g>
              
      </svg>
    
              </div>
            

        <!-- Row 4: Live Corridor Location & Timings -->
        <div class="timings-wrapper">
          <div class="location-row">
            <span class="emoji-icon" style="color: #64B5F6;">📍</span>
            <span class="location-text"><!--?lit-->Between Horse Guards &amp; Trafalgar Sq</span>
          </div>

          <!--?lit-->
                <div class="metrics-grid">
                  <!-- Left: Doorstep Leave-by Pill -->
                  <div class="metric-left">
                    <span class="leave-pill" style="background: rgba(76, 175, 80, 0.15); border-color: #4CAF50; color: #4CAF50;">
                      <span class="emoji-icon">👟</span>
                      <span><!--?lit-->08:18</span>
                    </span>
                  </div>

                  <!-- Centre: Transit Leg (Departure + Icon + Transit Arrival) -->
                  <div class="metric-centre">
                    <span class="transit-pill">
                      <span class="transit-time"><!--?lit-->08:24</span>
                      <span class="emoji-icon"><!--?lit-->🚌</span>
                      <span class="transit-time"><!--?lit-->08:56</span>
                    </span>
                  </div>

                  <!-- Right: Final Destination Arrival -->
                  <div class="metric-right">
                    <!--?lit-->
                          <span class="destination-pill" style="background: rgba(255, 255, 255, 0.05); border-color: rgba(255, 255, 255, 0.08); color: #FFFFFF;">
                            <span class="emoji-icon"><!--?lit-->🏫</span>
                            <span class="destination-time"><!--?lit-->09:06</span>
                          </span>
                        
                  </div>
                </div>
              
        </div>
      </div>
    <!----><!---->
      <div class="transit-module" role="button" tabindex="0" aria-label="View details for Southeastern to London Bridge">
        <!-- Row 2: Transport Mode & Line Health -->
        <div class="module-header">
          <div class="mode-label-group">
            <span class="route-badge" style="background: #0019A8;">
              <!--?lit-->Southeastern
            </span>
            <span class="destination-label"><!--?lit-->London Bridge</span>
          </div>
          <div class="line-health" style="color: #F44336;">
            <span><!--?lit-->✕</span>
            <span><!--?lit-->Part Suspended</span>
          </div>
        </div>

        <!-- Row 3: Corridor Schematic -->
        <!--?lit-->
              <div class="schematic-wrapper">
                <!--?lit-->
        <svg viewBox="0 0 460 60" class="schematic-svg">
          <defs>
            <linearGradient gradientUnits="userSpaceOnUse" y1="22" y2="22" id="terminus-grad-sensor-commute-nelson-to-brick-lane-train-southeastern" x1="40" x2="420">
              <stop offset="0%" stop-opacity="0" stop-color="#0019A8"></stop>
              <stop offset="100%" stop-opacity="1" stop-color="#0019A8"></stop>
            </linearGradient>
          </defs>

          <!-- Virtual Approach Line (Brand Colour with 0 Alpha on Left Fading to Solid on Right) -->
          <line y1="22" y2="22" stroke-width="6" stroke-linecap="round" x1="40" x2="420" stroke="url(#terminus-grad-sensor-commute-nelson-to-brick-lane-train-southeastern)"></line>

          <!-- Highlighted Boarding Stop (at the Right) -->
          <circle cy="22" r="9" fill="#2B2D3A" stroke-width="3.5" cx="420" stroke="#0019A8"></circle>
          <circle cy="22" r="4" fill="#FFFFFF" cx="420"></circle>
          <text y="46" text-anchor="middle" fill="#FFFFFF" font-size="10.5" font-family="system-ui" font-weight="700" x="420">
            <!--?lit-->Charing Cross
          </text>

          <!-- Vehicle Marker (Clean White Circle, No Outer Halo) -->
          <!--?lit-->
                  <g style="filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.7)); transition: transform 0.6s ease;" transform="translate(344, 22)">
                    <circle cx="0" cy="0" r="11" stroke="#FFFFFF" stroke-width="2.5" fill="#0019A8"></circle>
                    <g transform="translate(-6, -6) scale(0.5)">
                      <path fill="#FFFFFF" d="M12 2c-4 0-8 .5-8 4v9.5C4 17.43 5.57 19 7.5 19L6 20.5v.5h12v-.5L16.5 19c1.93 0 3.5-1.57 3.5-3.5V6c0-3.5-4-4-8-4zm0 2c3.5 0 6 .5 6 2.5V8H6V6.5C6 4.5 8.5 4 12 4zm-5 12c-.83 0-1.5-.67-1.5-1.5S6.17 13 7 13s1.5.67 1.5 1.5S7.83 16 7 16zm10 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm1-5H6v-2h12v2z"></path>
                    </g>
                  </g>
                
        </svg>
      
              </div>
            

        <!-- Row 4: Live Corridor Location & Timings -->
        <div class="timings-wrapper">
          <div class="location-row">
            <span class="emoji-icon" style="color: #64B5F6;">📍</span>
            <span class="location-text"><!--?lit-->Platform 2 Charing Cross</span>
          </div>

          <!--?lit-->
                <div class="metrics-grid">
                  <!-- Left: Doorstep Leave-by Pill -->
                  <div class="metric-left">
                    <span class="leave-pill" style="background: rgba(76, 175, 80, 0.15); border-color: #4CAF50; color: #4CAF50;">
                      <span class="emoji-icon">👟</span>
                      <span><!--?lit-->08:20</span>
                    </span>
                  </div>

                  <!-- Centre: Transit Leg (Departure + Icon + Transit Arrival) -->
                  <div class="metric-centre">
                    <span class="transit-pill">
                      <span class="transit-time"><!--?lit-->08:26</span>
                      <span class="emoji-icon"><!--?lit-->🚆</span>
                      <span class="transit-time"><!--?lit-->08:34</span>
                    </span>
                  </div>

                  <!-- Right: Final Destination Arrival -->
                  <div class="metric-right">
                    <!--?lit-->
                          <span class="destination-pill" style="background: rgba(255, 255, 255, 0.05); border-color: rgba(255, 255, 255, 0.08); color: #FFFFFF;">
                            <span class="emoji-icon"><!--?lit-->🏫</span>
                            <span class="destination-time"><!--?lit-->08:49</span>
                          </span>
                        
                  </div>
                </div>
              
        </div>
      </div>
    <!---->
        </div>
      </div>
    "
`;

exports[`CommuteTrackerCard > DOM Snapshots > matches late arrival warning snapshot 1`] = `
"<!---->
      <div class="card-container" role="region" aria-label="Nelson's Column to Brick Lane">
        <div class="card-layout">
          <!-- Row 1: Unified Header -->
          <div class="header-row">
            <div class="header-left">
              <!--?lit--><img class="person-avatar" src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?auto=format&amp;fit=crop&amp;w=128&amp;h=128&amp;q=80" alt="Nelson's Column to Brick Lane">
              <div class="header-title"><!--?lit-->Nelson's Column to Brick Lane</div>
            </div>
            <div class="header-right">
              <span class="header-pill" style="background: rgba(76, 175, 80, 0.15); border-color: #4CAF50; color: #4CAF50;">
                <!--?lit-->Leave in 12m
              </span>
            </div>
          </div>

          <!-- Transit Modules (Only displayed when commute is relevant) -->
          <!--?lit--><!---->
      <div class="transit-module" role="button" tabindex="0" aria-label="View details for 26 to Shoreditch">
        <!-- Row 2: Transport Mode & Line Health -->
        <div class="module-header">
          <div class="mode-label-group">
            <span class="route-badge" style="background: #DC241F;">
              <!--?lit-->26
            </span>
            <span class="destination-label"><!--?lit-->Shoreditch</span>
          </div>
          <div class="line-health" style="color: #4CAF50;">
            <span><!--?lit-->✓</span>
            <span><!--?lit-->Good Service</span>
          </div>
        </div>

        <!-- Row 3: Corridor Schematic -->
        <!--?lit-->
              <div class="schematic-wrapper">
                <!--?lit-->
      <svg viewBox="0 0 460 60" class="schematic-svg">
        <!-- Background Track -->
        <line y1="22" y2="22" stroke="rgba(255, 255, 255, 0.12)" stroke-width="8" stroke-linecap="round" x1="40" x2="420"></line>
        <!-- Colored Route Track -->
        <line y1="22" y2="22" stroke-width="6" stroke-linecap="round" x1="40" x2="420" stroke="#DC241F"></line>

        <!-- Stops Nodes -->
        <!--?lit--><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="40"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="40">
              <!--?lit-->Victoria
            </text>
          <!----><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="166.66666666666669"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="166.66666666666669">
              <!--?lit-->Westminster
            </text>
          <!----><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="293.33333333333337"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="293.33333333333337">
              <!--?lit-->Horse Guards
            </text>
          <!----><!---->
              <circle cy="22" r="9" fill="#2B2D3A" stroke-width="3.5" cx="420" stroke="#DC241F"></circle>
              <circle cy="22" r="4" fill="#FFFFFF" cx="420"></circle>
              <text y="46" text-anchor="middle" fill="#FFFFFF" font-size="10.5" font-family="system-ui" font-weight="700" x="420">
                <!--?lit-->Trafalgar Sq
              </text>
            <!---->

        <!-- Vehicle Marker (Clean White Circle, No Outer Halo) -->
        <!--?lit-->
                <g style="filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.7)); transition: transform 0.6s ease;" transform="translate(331.3333333333333, 22)">
                  <circle cx="0" cy="0" r="11" stroke="#FFFFFF" stroke-width="2.5" fill="#DC241F"></circle>
                  <g transform="translate(-6, -6) scale(0.5)">
                    <path fill="#FFFFFF" d="M4 16c0 .88.39 1.67 1 2.22V20c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h8v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1.78c.61-.55 1-1.34 1-2.22V6c0-3.5-3.58-4-8-4s-8 .5-8 4v10zm3.5 1c-.83 0-1.5-.67-1.5-1.5S6.67 14 7.5 14s1.5.67 1.5 1.5S8.33 17 7.5 17zm9 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm1.5-6H6V6h12v5z"></path>
                  </g>
                </g>
              
      </svg>
    
              </div>
            

        <!-- Row 4: Live Corridor Location & Timings -->
        <div class="timings-wrapper">
          <div class="location-row">
            <span class="emoji-icon" style="color: #64B5F6;">📍</span>
            <span class="location-text"><!--?lit-->Between Horse Guards &amp; Trafalgar Sq</span>
          </div>

          <!--?lit-->
                <div class="metrics-grid">
                  <!-- Left: Doorstep Leave-by Pill -->
                  <div class="metric-left">
                    <span class="leave-pill" style="background: rgba(76, 175, 80, 0.15); border-color: #4CAF50; color: #4CAF50;">
                      <span class="emoji-icon">👟</span>
                      <span><!--?lit-->08:18</span>
                    </span>
                  </div>

                  <!-- Centre: Transit Leg (Departure + Icon + Transit Arrival) -->
                  <div class="metric-centre">
                    <span class="transit-pill">
                      <span class="transit-time"><!--?lit-->08:24</span>
                      <span class="emoji-icon"><!--?lit-->🚌</span>
                      <span class="transit-time"><!--?lit-->08:56</span>
                    </span>
                  </div>

                  <!-- Right: Final Destination Arrival -->
                  <div class="metric-right">
                    <!--?lit-->
                          <span class="destination-pill" style="background: rgba(255, 82, 82, 0.15); border-color: #FF5252; color: #FF8A80;">
                            <span class="emoji-icon"><!--?lit-->🏫</span>
                            <span class="destination-time"><!--?lit-->09:06</span>
                          </span>
                        
                  </div>
                </div>
              
        </div>
      </div>
    <!----><!---->
      <div class="transit-module" role="button" tabindex="0" aria-label="View details for Southeastern to London Bridge">
        <!-- Row 2: Transport Mode & Line Health -->
        <div class="module-header">
          <div class="mode-label-group">
            <span class="route-badge" style="background: #0019A8;">
              <!--?lit-->Southeastern
            </span>
            <span class="destination-label"><!--?lit-->London Bridge</span>
          </div>
          <div class="line-health" style="color: #4CAF50;">
            <span><!--?lit-->✓</span>
            <span><!--?lit-->Good Service</span>
          </div>
        </div>

        <!-- Row 3: Corridor Schematic -->
        <!--?lit-->
              <div class="schematic-wrapper">
                <!--?lit-->
        <svg viewBox="0 0 460 60" class="schematic-svg">
          <defs>
            <linearGradient gradientUnits="userSpaceOnUse" y1="22" y2="22" id="terminus-grad-sensor-commute-nelson-to-brick-lane-train-southeastern" x1="40" x2="420">
              <stop offset="0%" stop-opacity="0" stop-color="#0019A8"></stop>
              <stop offset="100%" stop-opacity="1" stop-color="#0019A8"></stop>
            </linearGradient>
          </defs>

          <!-- Virtual Approach Line (Brand Colour with 0 Alpha on Left Fading to Solid on Right) -->
          <line y1="22" y2="22" stroke-width="6" stroke-linecap="round" x1="40" x2="420" stroke="url(#terminus-grad-sensor-commute-nelson-to-brick-lane-train-southeastern)"></line>

          <!-- Highlighted Boarding Stop (at the Right) -->
          <circle cy="22" r="9" fill="#2B2D3A" stroke-width="3.5" cx="420" stroke="#0019A8"></circle>
          <circle cy="22" r="4" fill="#FFFFFF" cx="420"></circle>
          <text y="46" text-anchor="middle" fill="#FFFFFF" font-size="10.5" font-family="system-ui" font-weight="700" x="420">
            <!--?lit-->Charing Cross
          </text>

          <!-- Vehicle Marker (Clean White Circle, No Outer Halo) -->
          <!--?lit-->
                  <g style="filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.7)); transition: transform 0.6s ease;" transform="translate(344, 22)">
                    <circle cx="0" cy="0" r="11" stroke="#FFFFFF" stroke-width="2.5" fill="#0019A8"></circle>
                    <g transform="translate(-6, -6) scale(0.5)">
                      <path fill="#FFFFFF" d="M12 2c-4 0-8 .5-8 4v9.5C4 17.43 5.57 19 7.5 19L6 20.5v.5h12v-.5L16.5 19c1.93 0 3.5-1.57 3.5-3.5V6c0-3.5-4-4-8-4zm0 2c3.5 0 6 .5 6 2.5V8H6V6.5C6 4.5 8.5 4 12 4zm-5 12c-.83 0-1.5-.67-1.5-1.5S6.17 13 7 13s1.5.67 1.5 1.5S7.83 16 7 16zm10 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm1-5H6v-2h12v2z"></path>
                    </g>
                  </g>
                
        </svg>
      
              </div>
            

        <!-- Row 4: Live Corridor Location & Timings -->
        <div class="timings-wrapper">
          <div class="location-row">
            <span class="emoji-icon" style="color: #64B5F6;">📍</span>
            <span class="location-text"><!--?lit-->Platform 2 Charing Cross</span>
          </div>

          <!--?lit-->
                <div class="metrics-grid">
                  <!-- Left: Doorstep Leave-by Pill -->
                  <div class="metric-left">
                    <span class="leave-pill" style="background: rgba(76, 175, 80, 0.15); border-color: #4CAF50; color: #4CAF50;">
                      <span class="emoji-icon">👟</span>
                      <span><!--?lit-->08:20</span>
                    </span>
                  </div>

                  <!-- Centre: Transit Leg (Departure + Icon + Transit Arrival) -->
                  <div class="metric-centre">
                    <span class="transit-pill">
                      <span class="transit-time"><!--?lit-->08:26</span>
                      <span class="emoji-icon"><!--?lit-->🚆</span>
                      <span class="transit-time"><!--?lit-->08:34</span>
                    </span>
                  </div>

                  <!-- Right: Final Destination Arrival -->
                  <div class="metric-right">
                    <!--?lit-->
                          <span class="destination-pill" style="background: rgba(255, 255, 255, 0.05); border-color: rgba(255, 255, 255, 0.08); color: #FFFFFF;">
                            <span class="emoji-icon"><!--?lit-->🏫</span>
                            <span class="destination-time"><!--?lit-->08:49</span>
                          </span>
                        
                  </div>
                </div>
              
        </div>
      </div>
    <!---->
        </div>
      </div>
    "
`;

exports[`CommuteTrackerCard > DOM Snapshots > matches leave now urgent snapshot 1`] = `
"<!---->
      <div class="card-container" role="region" aria-label="Nelson's Column to Brick Lane">
        <div class="card-layout">
          <!-- Row 1: Unified Header -->
          <div class="header-row">
            <div class="header-left">
              <!--?lit--><img class="person-avatar" src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?auto=format&amp;fit=crop&amp;w=128&amp;h=128&amp;q=80" alt="Nelson's Column to Brick Lane">
              <div class="header-title"><!--?lit-->Nelson's Column to Brick Lane</div>
            </div>
            <div class="header-right">
              <span class="header-pill" style="background: rgba(255, 82, 82, 0.2); border-color: #FF5252; color: #FF5252;">
                <!--?lit-->🚨 LEAVE NOW
              </span>
            </div>
          </div>

          <!-- Transit Modules (Only displayed when commute is relevant) -->
          <!--?lit--><!---->
      <div class="transit-module" role="button" tabindex="0" aria-label="View details for 26 to Shoreditch">
        <!-- Row 2: Transport Mode & Line Health -->
        <div class="module-header">
          <div class="mode-label-group">
            <span class="route-badge" style="background: #DC241F;">
              <!--?lit-->26
            </span>
            <span class="destination-label"><!--?lit-->Shoreditch</span>
          </div>
          <div class="line-health" style="color: #4CAF50;">
            <span><!--?lit-->✓</span>
            <span><!--?lit-->Good Service</span>
          </div>
        </div>

        <!-- Row 3: Corridor Schematic -->
        <!--?lit-->
              <div class="schematic-wrapper">
                <!--?lit-->
      <svg viewBox="0 0 460 60" class="schematic-svg">
        <!-- Background Track -->
        <line y1="22" y2="22" stroke="rgba(255, 255, 255, 0.12)" stroke-width="8" stroke-linecap="round" x1="40" x2="420"></line>
        <!-- Colored Route Track -->
        <line y1="22" y2="22" stroke-width="6" stroke-linecap="round" x1="40" x2="420" stroke="#DC241F"></line>

        <!-- Stops Nodes -->
        <!--?lit--><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="40"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="40">
              <!--?lit-->Victoria
            </text>
          <!----><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="166.66666666666669"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="166.66666666666669">
              <!--?lit-->Westminster
            </text>
          <!----><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="293.33333333333337"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="293.33333333333337">
              <!--?lit-->Horse Guards
            </text>
          <!----><!---->
              <circle cy="22" r="9" fill="#2B2D3A" stroke-width="3.5" cx="420" stroke="#DC241F"></circle>
              <circle cy="22" r="4" fill="#FFFFFF" cx="420"></circle>
              <text y="46" text-anchor="middle" fill="#FFFFFF" font-size="10.5" font-family="system-ui" font-weight="700" x="420">
                <!--?lit-->Trafalgar Sq
              </text>
            <!---->

        <!-- Vehicle Marker (Clean White Circle, No Outer Halo) -->
        <!--?lit-->
                <g style="filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.7)); transition: transform 0.6s ease;" transform="translate(331.3333333333333, 22)">
                  <circle cx="0" cy="0" r="11" stroke="#FFFFFF" stroke-width="2.5" fill="#DC241F"></circle>
                  <g transform="translate(-6, -6) scale(0.5)">
                    <path fill="#FFFFFF" d="M4 16c0 .88.39 1.67 1 2.22V20c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h8v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1.78c.61-.55 1-1.34 1-2.22V6c0-3.5-3.58-4-8-4s-8 .5-8 4v10zm3.5 1c-.83 0-1.5-.67-1.5-1.5S6.67 14 7.5 14s1.5.67 1.5 1.5S8.33 17 7.5 17zm9 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm1.5-6H6V6h12v5z"></path>
                  </g>
                </g>
              
      </svg>
    
              </div>
            

        <!-- Row 4: Live Corridor Location & Timings -->
        <div class="timings-wrapper">
          <div class="location-row">
            <span class="emoji-icon" style="color: #64B5F6;">📍</span>
            <span class="location-text"><!--?lit-->Between Horse Guards &amp; Trafalgar Sq</span>
          </div>

          <!--?lit-->
                <div class="metrics-grid">
                  <!-- Left: Doorstep Leave-by Pill -->
                  <div class="metric-left">
                    <span class="leave-pill" style="background: rgba(255, 82, 82, 0.2); border-color: #FF5252; color: #FF5252;">
                      <span class="emoji-icon">👟</span>
                      <span><!--?lit-->08:18</span>
                    </span>
                  </div>

                  <!-- Centre: Transit Leg (Departure + Icon + Transit Arrival) -->
                  <div class="metric-centre">
                    <span class="transit-pill">
                      <span class="transit-time"><!--?lit-->08:24</span>
                      <span class="emoji-icon"><!--?lit-->🚌</span>
                      <span class="transit-time"><!--?lit-->08:56</span>
                    </span>
                  </div>

                  <!-- Right: Final Destination Arrival -->
                  <div class="metric-right">
                    <!--?lit-->
                          <span class="destination-pill" style="background: rgba(255, 255, 255, 0.05); border-color: rgba(255, 255, 255, 0.08); color: #FFFFFF;">
                            <span class="emoji-icon"><!--?lit-->🏫</span>
                            <span class="destination-time"><!--?lit-->09:06</span>
                          </span>
                        
                  </div>
                </div>
              
        </div>
      </div>
    <!----><!---->
      <div class="transit-module" role="button" tabindex="0" aria-label="View details for Southeastern to London Bridge">
        <!-- Row 2: Transport Mode & Line Health -->
        <div class="module-header">
          <div class="mode-label-group">
            <span class="route-badge" style="background: #0019A8;">
              <!--?lit-->Southeastern
            </span>
            <span class="destination-label"><!--?lit-->London Bridge</span>
          </div>
          <div class="line-health" style="color: #4CAF50;">
            <span><!--?lit-->✓</span>
            <span><!--?lit-->Good Service</span>
          </div>
        </div>

        <!-- Row 3: Corridor Schematic -->
        <!--?lit-->
              <div class="schematic-wrapper">
                <!--?lit-->
        <svg viewBox="0 0 460 60" class="schematic-svg">
          <defs>
            <linearGradient gradientUnits="userSpaceOnUse" y1="22" y2="22" id="terminus-grad-sensor-commute-nelson-to-brick-lane-train-southeastern" x1="40" x2="420">
              <stop offset="0%" stop-opacity="0" stop-color="#0019A8"></stop>
              <stop offset="100%" stop-opacity="1" stop-color="#0019A8"></stop>
            </linearGradient>
          </defs>

          <!-- Virtual Approach Line (Brand Colour with 0 Alpha on Left Fading to Solid on Right) -->
          <line y1="22" y2="22" stroke-width="6" stroke-linecap="round" x1="40" x2="420" stroke="url(#terminus-grad-sensor-commute-nelson-to-brick-lane-train-southeastern)"></line>

          <!-- Highlighted Boarding Stop (at the Right) -->
          <circle cy="22" r="9" fill="#2B2D3A" stroke-width="3.5" cx="420" stroke="#0019A8"></circle>
          <circle cy="22" r="4" fill="#FFFFFF" cx="420"></circle>
          <text y="46" text-anchor="middle" fill="#FFFFFF" font-size="10.5" font-family="system-ui" font-weight="700" x="420">
            <!--?lit-->Charing Cross
          </text>

          <!-- Vehicle Marker (Clean White Circle, No Outer Halo) -->
          <!--?lit-->
                  <g style="filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.7)); transition: transform 0.6s ease;" transform="translate(344, 22)">
                    <circle cx="0" cy="0" r="11" stroke="#FFFFFF" stroke-width="2.5" fill="#0019A8"></circle>
                    <g transform="translate(-6, -6) scale(0.5)">
                      <path fill="#FFFFFF" d="M12 2c-4 0-8 .5-8 4v9.5C4 17.43 5.57 19 7.5 19L6 20.5v.5h12v-.5L16.5 19c1.93 0 3.5-1.57 3.5-3.5V6c0-3.5-4-4-8-4zm0 2c3.5 0 6 .5 6 2.5V8H6V6.5C6 4.5 8.5 4 12 4zm-5 12c-.83 0-1.5-.67-1.5-1.5S6.17 13 7 13s1.5.67 1.5 1.5S7.83 16 7 16zm10 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm1-5H6v-2h12v2z"></path>
                    </g>
                  </g>
                
        </svg>
      
              </div>
            

        <!-- Row 4: Live Corridor Location & Timings -->
        <div class="timings-wrapper">
          <div class="location-row">
            <span class="emoji-icon" style="color: #64B5F6;">📍</span>
            <span class="location-text"><!--?lit-->Platform 2 Charing Cross</span>
          </div>

          <!--?lit-->
                <div class="metrics-grid">
                  <!-- Left: Doorstep Leave-by Pill -->
                  <div class="metric-left">
                    <span class="leave-pill" style="background: rgba(76, 175, 80, 0.15); border-color: #4CAF50; color: #4CAF50;">
                      <span class="emoji-icon">👟</span>
                      <span><!--?lit-->08:20</span>
                    </span>
                  </div>

                  <!-- Centre: Transit Leg (Departure + Icon + Transit Arrival) -->
                  <div class="metric-centre">
                    <span class="transit-pill">
                      <span class="transit-time"><!--?lit-->08:26</span>
                      <span class="emoji-icon"><!--?lit-->🚆</span>
                      <span class="transit-time"><!--?lit-->08:34</span>
                    </span>
                  </div>

                  <!-- Right: Final Destination Arrival -->
                  <div class="metric-right">
                    <!--?lit-->
                          <span class="destination-pill" style="background: rgba(255, 255, 255, 0.05); border-color: rgba(255, 255, 255, 0.08); color: #FFFFFF;">
                            <span class="emoji-icon"><!--?lit-->🏫</span>
                            <span class="destination-time"><!--?lit-->08:49</span>
                          </span>
                        
                  </div>
                </div>
              
        </div>
      </div>
    <!---->
        </div>
      </div>
    "
`;

exports[`CommuteTrackerCard > DOM Snapshots > matches prepare window snapshot 1`] = `
"<!---->
      <div class="card-container" role="region" aria-label="Nelson's Column to Brick Lane">
        <div class="card-layout">
          <!-- Row 1: Unified Header -->
          <div class="header-row">
            <div class="header-left">
              <!--?lit--><img class="person-avatar" src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?auto=format&amp;fit=crop&amp;w=128&amp;h=128&amp;q=80" alt="Nelson's Column to Brick Lane">
              <div class="header-title"><!--?lit-->Nelson's Column to Brick Lane</div>
            </div>
            <div class="header-right">
              <span class="header-pill" style="background: rgba(255, 152, 0, 0.15); border-color: #FF9800; color: #FF9800;">
                <!--?lit-->Leave in 6m
              </span>
            </div>
          </div>

          <!-- Transit Modules (Only displayed when commute is relevant) -->
          <!--?lit--><!---->
      <div class="transit-module" role="button" tabindex="0" aria-label="View details for 26 to Shoreditch">
        <!-- Row 2: Transport Mode & Line Health -->
        <div class="module-header">
          <div class="mode-label-group">
            <span class="route-badge" style="background: #DC241F;">
              <!--?lit-->26
            </span>
            <span class="destination-label"><!--?lit-->Shoreditch</span>
          </div>
          <div class="line-health" style="color: #4CAF50;">
            <span><!--?lit-->✓</span>
            <span><!--?lit-->Good Service</span>
          </div>
        </div>

        <!-- Row 3: Corridor Schematic -->
        <!--?lit-->
              <div class="schematic-wrapper">
                <!--?lit-->
      <svg viewBox="0 0 460 60" class="schematic-svg">
        <!-- Background Track -->
        <line y1="22" y2="22" stroke="rgba(255, 255, 255, 0.12)" stroke-width="8" stroke-linecap="round" x1="40" x2="420"></line>
        <!-- Colored Route Track -->
        <line y1="22" y2="22" stroke-width="6" stroke-linecap="round" x1="40" x2="420" stroke="#DC241F"></line>

        <!-- Stops Nodes -->
        <!--?lit--><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="40"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="40">
              <!--?lit-->Victoria
            </text>
          <!----><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="166.66666666666669"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="166.66666666666669">
              <!--?lit-->Westminster
            </text>
          <!----><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="293.33333333333337"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="293.33333333333337">
              <!--?lit-->Horse Guards
            </text>
          <!----><!---->
              <circle cy="22" r="9" fill="#2B2D3A" stroke-width="3.5" cx="420" stroke="#DC241F"></circle>
              <circle cy="22" r="4" fill="#FFFFFF" cx="420"></circle>
              <text y="46" text-anchor="middle" fill="#FFFFFF" font-size="10.5" font-family="system-ui" font-weight="700" x="420">
                <!--?lit-->Trafalgar Sq
              </text>
            <!---->

        <!-- Vehicle Marker (Clean White Circle, No Outer Halo) -->
        <!--?lit-->
                <g style="filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.7)); transition: transform 0.6s ease;" transform="translate(331.3333333333333, 22)">
                  <circle cx="0" cy="0" r="11" stroke="#FFFFFF" stroke-width="2.5" fill="#DC241F"></circle>
                  <g transform="translate(-6, -6) scale(0.5)">
                    <path fill="#FFFFFF" d="M4 16c0 .88.39 1.67 1 2.22V20c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h8v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1.78c.61-.55 1-1.34 1-2.22V6c0-3.5-3.58-4-8-4s-8 .5-8 4v10zm3.5 1c-.83 0-1.5-.67-1.5-1.5S6.67 14 7.5 14s1.5.67 1.5 1.5S8.33 17 7.5 17zm9 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm1.5-6H6V6h12v5z"></path>
                  </g>
                </g>
              
      </svg>
    
              </div>
            

        <!-- Row 4: Live Corridor Location & Timings -->
        <div class="timings-wrapper">
          <div class="location-row">
            <span class="emoji-icon" style="color: #64B5F6;">📍</span>
            <span class="location-text"><!--?lit-->Between Horse Guards &amp; Trafalgar Sq</span>
          </div>

          <!--?lit-->
                <div class="metrics-grid">
                  <!-- Left: Doorstep Leave-by Pill -->
                  <div class="metric-left">
                    <span class="leave-pill" style="background: rgba(255, 152, 0, 0.15); border-color: #FF9800; color: #FF9800;">
                      <span class="emoji-icon">👟</span>
                      <span><!--?lit-->08:18</span>
                    </span>
                  </div>

                  <!-- Centre: Transit Leg (Departure + Icon + Transit Arrival) -->
                  <div class="metric-centre">
                    <span class="transit-pill">
                      <span class="transit-time"><!--?lit-->08:24</span>
                      <span class="emoji-icon"><!--?lit-->🚌</span>
                      <span class="transit-time"><!--?lit-->08:56</span>
                    </span>
                  </div>

                  <!-- Right: Final Destination Arrival -->
                  <div class="metric-right">
                    <!--?lit-->
                          <span class="destination-pill" style="background: rgba(255, 255, 255, 0.05); border-color: rgba(255, 255, 255, 0.08); color: #FFFFFF;">
                            <span class="emoji-icon"><!--?lit-->🏫</span>
                            <span class="destination-time"><!--?lit-->09:06</span>
                          </span>
                        
                  </div>
                </div>
              
        </div>
      </div>
    <!----><!---->
      <div class="transit-module" role="button" tabindex="0" aria-label="View details for Southeastern to London Bridge">
        <!-- Row 2: Transport Mode & Line Health -->
        <div class="module-header">
          <div class="mode-label-group">
            <span class="route-badge" style="background: #0019A8;">
              <!--?lit-->Southeastern
            </span>
            <span class="destination-label"><!--?lit-->London Bridge</span>
          </div>
          <div class="line-health" style="color: #4CAF50;">
            <span><!--?lit-->✓</span>
            <span><!--?lit-->Good Service</span>
          </div>
        </div>

        <!-- Row 3: Corridor Schematic -->
        <!--?lit-->
              <div class="schematic-wrapper">
                <!--?lit-->
        <svg viewBox="0 0 460 60" class="schematic-svg">
          <defs>
            <linearGradient gradientUnits="userSpaceOnUse" y1="22" y2="22" id="terminus-grad-sensor-commute-nelson-to-brick-lane-train-southeastern" x1="40" x2="420">
              <stop offset="0%" stop-opacity="0" stop-color="#0019A8"></stop>
              <stop offset="100%" stop-opacity="1" stop-color="#0019A8"></stop>
            </linearGradient>
          </defs>

          <!-- Virtual Approach Line (Brand Colour with 0 Alpha on Left Fading to Solid on Right) -->
          <line y1="22" y2="22" stroke-width="6" stroke-linecap="round" x1="40" x2="420" stroke="url(#terminus-grad-sensor-commute-nelson-to-brick-lane-train-southeastern)"></line>

          <!-- Highlighted Boarding Stop (at the Right) -->
          <circle cy="22" r="9" fill="#2B2D3A" stroke-width="3.5" cx="420" stroke="#0019A8"></circle>
          <circle cy="22" r="4" fill="#FFFFFF" cx="420"></circle>
          <text y="46" text-anchor="middle" fill="#FFFFFF" font-size="10.5" font-family="system-ui" font-weight="700" x="420">
            <!--?lit-->Charing Cross
          </text>

          <!-- Vehicle Marker (Clean White Circle, No Outer Halo) -->
          <!--?lit-->
                  <g style="filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.7)); transition: transform 0.6s ease;" transform="translate(344, 22)">
                    <circle cx="0" cy="0" r="11" stroke="#FFFFFF" stroke-width="2.5" fill="#0019A8"></circle>
                    <g transform="translate(-6, -6) scale(0.5)">
                      <path fill="#FFFFFF" d="M12 2c-4 0-8 .5-8 4v9.5C4 17.43 5.57 19 7.5 19L6 20.5v.5h12v-.5L16.5 19c1.93 0 3.5-1.57 3.5-3.5V6c0-3.5-4-4-8-4zm0 2c3.5 0 6 .5 6 2.5V8H6V6.5C6 4.5 8.5 4 12 4zm-5 12c-.83 0-1.5-.67-1.5-1.5S6.17 13 7 13s1.5.67 1.5 1.5S7.83 16 7 16zm10 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm1-5H6v-2h12v2z"></path>
                    </g>
                  </g>
                
        </svg>
      
              </div>
            

        <!-- Row 4: Live Corridor Location & Timings -->
        <div class="timings-wrapper">
          <div class="location-row">
            <span class="emoji-icon" style="color: #64B5F6;">📍</span>
            <span class="location-text"><!--?lit-->Platform 2 Charing Cross</span>
          </div>

          <!--?lit-->
                <div class="metrics-grid">
                  <!-- Left: Doorstep Leave-by Pill -->
                  <div class="metric-left">
                    <span class="leave-pill" style="background: rgba(76, 175, 80, 0.15); border-color: #4CAF50; color: #4CAF50;">
                      <span class="emoji-icon">👟</span>
                      <span><!--?lit-->08:20</span>
                    </span>
                  </div>

                  <!-- Centre: Transit Leg (Departure + Icon + Transit Arrival) -->
                  <div class="metric-centre">
                    <span class="transit-pill">
                      <span class="transit-time"><!--?lit-->08:26</span>
                      <span class="emoji-icon"><!--?lit-->🚆</span>
                      <span class="transit-time"><!--?lit-->08:34</span>
                    </span>
                  </div>

                  <!-- Right: Final Destination Arrival -->
                  <div class="metric-right">
                    <!--?lit-->
                          <span class="destination-pill" style="background: rgba(255, 255, 255, 0.05); border-color: rgba(255, 255, 255, 0.08); color: #FFFFFF;">
                            <span class="emoji-icon"><!--?lit-->🏫</span>
                            <span class="destination-time"><!--?lit-->08:49</span>
                          </span>
                        
                  </div>
                </div>
              
        </div>
      </div>
    <!---->
        </div>
      </div>
    "
`;

exports[`CommuteTrackerCard > DOM Snapshots > matches relaxed scenario snapshot 1`] = `
"<!---->
      <div class="card-container" role="region" aria-label="Nelson's Column to Brick Lane">
        <div class="card-layout">
          <!-- Row 1: Unified Header -->
          <div class="header-row">
            <div class="header-left">
              <!--?lit--><img class="person-avatar" src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?auto=format&amp;fit=crop&amp;w=128&amp;h=128&amp;q=80" alt="Nelson's Column to Brick Lane">
              <div class="header-title"><!--?lit-->Nelson's Column to Brick Lane</div>
            </div>
            <div class="header-right">
              <span class="header-pill" style="background: rgba(76, 175, 80, 0.15); border-color: #4CAF50; color: #4CAF50;">
                <!--?lit-->Leave in 12m
              </span>
            </div>
          </div>

          <!-- Transit Modules (Only displayed when commute is relevant) -->
          <!--?lit--><!---->
      <div class="transit-module" role="button" tabindex="0" aria-label="View details for 26 to Shoreditch">
        <!-- Row 2: Transport Mode & Line Health -->
        <div class="module-header">
          <div class="mode-label-group">
            <span class="route-badge" style="background: #DC241F;">
              <!--?lit-->26
            </span>
            <span class="destination-label"><!--?lit-->Shoreditch</span>
          </div>
          <div class="line-health" style="color: #4CAF50;">
            <span><!--?lit-->✓</span>
            <span><!--?lit-->Good Service</span>
          </div>
        </div>

        <!-- Row 3: Corridor Schematic -->
        <!--?lit-->
              <div class="schematic-wrapper">
                <!--?lit-->
      <svg viewBox="0 0 460 60" class="schematic-svg">
        <!-- Background Track -->
        <line y1="22" y2="22" stroke="rgba(255, 255, 255, 0.12)" stroke-width="8" stroke-linecap="round" x1="40" x2="420"></line>
        <!-- Colored Route Track -->
        <line y1="22" y2="22" stroke-width="6" stroke-linecap="round" x1="40" x2="420" stroke="#DC241F"></line>

        <!-- Stops Nodes -->
        <!--?lit--><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="40"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="40">
              <!--?lit-->Victoria
            </text>
          <!----><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="166.66666666666669"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="166.66666666666669">
              <!--?lit-->Westminster
            </text>
          <!----><!---->
            <circle cy="22" r="6" fill="#2B2D3A" stroke="#FFFFFF" stroke-width="3" cx="293.33333333333337"></circle>
            <text y="46" text-anchor="middle" fill="#A0A5B5" font-size="9.5" font-family="system-ui" font-weight="500" x="293.33333333333337">
              <!--?lit-->Horse Guards
            </text>
          <!----><!---->
              <circle cy="22" r="9" fill="#2B2D3A" stroke-width="3.5" cx="420" stroke="#DC241F"></circle>
              <circle cy="22" r="4" fill="#FFFFFF" cx="420"></circle>
              <text y="46" text-anchor="middle" fill="#FFFFFF" font-size="10.5" font-family="system-ui" font-weight="700" x="420">
                <!--?lit-->Trafalgar Sq
              </text>
            <!---->

        <!-- Vehicle Marker (Clean White Circle, No Outer Halo) -->
        <!--?lit-->
                <g style="filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.7)); transition: transform 0.6s ease;" transform="translate(331.3333333333333, 22)">
                  <circle cx="0" cy="0" r="11" stroke="#FFFFFF" stroke-width="2.5" fill="#DC241F"></circle>
                  <g transform="translate(-6, -6) scale(0.5)">
                    <path fill="#FFFFFF" d="M4 16c0 .88.39 1.67 1 2.22V20c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h8v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1.78c.61-.55 1-1.34 1-2.22V6c0-3.5-3.58-4-8-4s-8 .5-8 4v10zm3.5 1c-.83 0-1.5-.67-1.5-1.5S6.67 14 7.5 14s1.5.67 1.5 1.5S8.33 17 7.5 17zm9 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm1.5-6H6V6h12v5z"></path>
                  </g>
                </g>
              
      </svg>
    
              </div>
            

        <!-- Row 4: Live Corridor Location & Timings -->
        <div class="timings-wrapper">
          <div class="location-row">
            <span class="emoji-icon" style="color: #64B5F6;">📍</span>
            <span class="location-text"><!--?lit-->Between Horse Guards &amp; Trafalgar Sq</span>
          </div>

          <!--?lit-->
                <div class="metrics-grid">
                  <!-- Left: Doorstep Leave-by Pill -->
                  <div class="metric-left">
                    <span class="leave-pill" style="background: rgba(76, 175, 80, 0.15); border-color: #4CAF50; color: #4CAF50;">
                      <span class="emoji-icon">👟</span>
                      <span><!--?lit-->08:18</span>
                    </span>
                  </div>

                  <!-- Centre: Transit Leg (Departure + Icon + Transit Arrival) -->
                  <div class="metric-centre">
                    <span class="transit-pill">
                      <span class="transit-time"><!--?lit-->08:24</span>
                      <span class="emoji-icon"><!--?lit-->🚌</span>
                      <span class="transit-time"><!--?lit-->08:56</span>
                    </span>
                  </div>

                  <!-- Right: Final Destination Arrival -->
                  <div class="metric-right">
                    <!--?lit-->
                          <span class="destination-pill" style="background: rgba(255, 255, 255, 0.05); border-color: rgba(255, 255, 255, 0.08); color: #FFFFFF;">
                            <span class="emoji-icon"><!--?lit-->🏫</span>
                            <span class="destination-time"><!--?lit-->09:06</span>
                          </span>
                        
                  </div>
                </div>
              
        </div>
      </div>
    <!----><!---->
      <div class="transit-module" role="button" tabindex="0" aria-label="View details for Southeastern to London Bridge">
        <!-- Row 2: Transport Mode & Line Health -->
        <div class="module-header">
          <div class="mode-label-group">
            <span class="route-badge" style="background: #0019A8;">
              <!--?lit-->Southeastern
            </span>
            <span class="destination-label"><!--?lit-->London Bridge</span>
          </div>
          <div class="line-health" style="color: #4CAF50;">
            <span><!--?lit-->✓</span>
            <span><!--?lit-->Good Service</span>
          </div>
        </div>

        <!-- Row 3: Corridor Schematic -->
        <!--?lit-->
              <div class="schematic-wrapper">
                <!--?lit-->
        <svg viewBox="0 0 460 60" class="schematic-svg">
          <defs>
            <linearGradient gradientUnits="userSpaceOnUse" y1="22" y2="22" id="terminus-grad-sensor-commute-nelson-to-brick-lane-train-southeastern" x1="40" x2="420">
              <stop offset="0%" stop-opacity="0" stop-color="#0019A8"></stop>
              <stop offset="100%" stop-opacity="1" stop-color="#0019A8"></stop>
            </linearGradient>
          </defs>

          <!-- Virtual Approach Line (Brand Colour with 0 Alpha on Left Fading to Solid on Right) -->
          <line y1="22" y2="22" stroke-width="6" stroke-linecap="round" x1="40" x2="420" stroke="url(#terminus-grad-sensor-commute-nelson-to-brick-lane-train-southeastern)"></line>

          <!-- Highlighted Boarding Stop (at the Right) -->
          <circle cy="22" r="9" fill="#2B2D3A" stroke-width="3.5" cx="420" stroke="#0019A8"></circle>
          <circle cy="22" r="4" fill="#FFFFFF" cx="420"></circle>
          <text y="46" text-anchor="middle" fill="#FFFFFF" font-size="10.5" font-family="system-ui" font-weight="700" x="420">
            <!--?lit-->Charing Cross
          </text>

          <!-- Vehicle Marker (Clean White Circle, No Outer Halo) -->
          <!--?lit-->
                  <g style="filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.7)); transition: transform 0.6s ease;" transform="translate(344, 22)">
                    <circle cx="0" cy="0" r="11" stroke="#FFFFFF" stroke-width="2.5" fill="#0019A8"></circle>
                    <g transform="translate(-6, -6) scale(0.5)">
                      <path fill="#FFFFFF" d="M12 2c-4 0-8 .5-8 4v9.5C4 17.43 5.57 19 7.5 19L6 20.5v.5h12v-.5L16.5 19c1.93 0 3.5-1.57 3.5-3.5V6c0-3.5-4-4-8-4zm0 2c3.5 0 6 .5 6 2.5V8H6V6.5C6 4.5 8.5 4 12 4zm-5 12c-.83 0-1.5-.67-1.5-1.5S6.17 13 7 13s1.5.67 1.5 1.5S7.83 16 7 16zm10 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm1-5H6v-2h12v2z"></path>
                    </g>
                  </g>
                
        </svg>
      
              </div>
            

        <!-- Row 4: Live Corridor Location & Timings -->
        <div class="timings-wrapper">
          <div class="location-row">
            <span class="emoji-icon" style="color: #64B5F6;">📍</span>
            <span class="location-text"><!--?lit-->Platform 2 Charing Cross</span>
          </div>

          <!--?lit-->
                <div class="metrics-grid">
                  <!-- Left: Doorstep Leave-by Pill -->
                  <div class="metric-left">
                    <span class="leave-pill" style="background: rgba(76, 175, 80, 0.15); border-color: #4CAF50; color: #4CAF50;">
                      <span class="emoji-icon">👟</span>
                      <span><!--?lit-->08:20</span>
                    </span>
                  </div>

                  <!-- Centre: Transit Leg (Departure + Icon + Transit Arrival) -->
                  <div class="metric-centre">
                    <span class="transit-pill">
                      <span class="transit-time"><!--?lit-->08:26</span>
                      <span class="emoji-icon"><!--?lit-->🚆</span>
                      <span class="transit-time"><!--?lit-->08:34</span>
                    </span>
                  </div>

                  <!-- Right: Final Destination Arrival -->
                  <div class="metric-right">
                    <!--?lit-->
                          <span class="destination-pill" style="background: rgba(255, 255, 255, 0.05); border-color: rgba(255, 255, 255, 0.08); color: #FFFFFF;">
                            <span class="emoji-icon"><!--?lit-->🏫</span>
                            <span class="destination-time"><!--?lit-->08:49</span>
                          </span>
                        
                  </div>
                </div>
              
        </div>
      </div>
    <!---->
        </div>
      </div>
    "
`;

exports[`CommuteTrackerCard > DOM Snapshots > matches standby dormant snapshot 1`] = `
"<!---->
      <div class="card-container" role="region" aria-label="Nelson's Column to Brick Lane">
        <div class="card-layout">
          <!-- Row 1: Unified Header -->
          <div class="header-row">
            <div class="header-left">
              <!--?lit--><img class="person-avatar" src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?auto=format&amp;fit=crop&amp;w=128&amp;h=128&amp;q=80" alt="Nelson's Column to Brick Lane">
              <div class="header-title"><!--?lit-->Nelson's Column to Brick Lane</div>
            </div>
            <div class="header-right">
              <span class="header-pill" style="background: rgba(142, 142, 147, 0.2); border-color: #8E8E93; color: #8E8E93;">
                <!--?lit-->Standby
              </span>
            </div>
          </div>

          <!-- Transit Modules (Only displayed when commute is relevant) -->
          <!--?lit-->
        </div>
      </div>
    "
`;
